--- a/competition_modules/object_detection/CMakeLists.txt
+++ b/competition_modules/object_detection/CMakeLists.txt
@@ -7,7 +7,13 @@ project(object_detection)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED
+  geometry_msgs
+  rospy
+  std_msgs
+  sensor_msgs
+  message_generation
+)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -50,11 +56,12 @@ find_package(catkin REQUIRED)
 # )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
+  add_service_files(
+    FILES
+    pred.srv
 #   Service1.srv
 #   Service2.srv
-# )
+  )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -64,10 +71,11 @@ find_package(catkin REQUIRED)
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+  generate_messages(
+    DEPENDENCIES
+    sensor_msgs
+    std_msgs  # Or other packages containing msgs
+  )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -113,7 +121,7 @@ catkin_package(
 ## Your package locations should be listed before other locations
 include_directories(
 # include
-# ${catkin_INCLUDE_DIRS}
+  ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
