--- a/competition_modules/pose_estimate_and_pick/CMakeLists.txt
+++ b/competition_modules/pose_estimate_and_pick/CMakeLists.txt
@@ -7,7 +7,18 @@ project(pose_estimate_and_pick)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED
+  cv_bridge
+  roscpp
+  rospy
+  geometry_msgs
+  sensor_msgs
+  visualization_msgs
+  std_msgs
+  pcl_conversions
+  pcl_ros
+  message_generation
+ )
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -50,11 +61,13 @@ find_package(catkin REQUIRED)
 # )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
+  add_service_files(
+    FILES
+    pred.srv
+    item.srv
 #   Service1.srv
 #   Service2.srv
-# )
+  )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -64,10 +77,11 @@ find_package(catkin REQUIRED)
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+  generate_messages(
+    DEPENDENCIES
+    sensor_msgs
+    std_msgs  # Or other packages containing msgs
+  )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -113,13 +127,22 @@ catkin_package(
 ## Your package locations should be listed before other locations
 include_directories(
 # include
-# ${catkin_INCLUDE_DIRS}
+  ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
 #   src/${PROJECT_NAME}/pose_estimate_and_pick.cpp
 # )
+
+add_executable(cloud_icp_align src/cloud_icp_align.cpp)
+target_link_libraries(cloud_icp_align ${catkin_LIBRARIES})
+
+add_executable(cloud_icp_demo src/cloud_icp_demo.cpp)
+target_link_libraries(cloud_icp_demo ${catkin_LIBRARIES})
+
+add_executable(demo src/demo.cpp src/icp_pose_estimation.cpp src/icp_pose_estimation.h)
+target_link_libraries(demo ${catkin_LIBRARIES})
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
